1.6.1+build76 feat: added shop footer section; improved battle type UI with additional elements fix: corrected border color for possible rewards hover effect style: adjusted shop layout heights and positioning for better alignment

--- a/src/Containers/PossibleRewardsScreen/PossibleRewardsScreen.css
+++ b/src/Containers/PossibleRewardsScreen/PossibleRewardsScreen.css
@@ -208,7 +208,7 @@
 .ContainerInfoComponentStyle-possibleRewardsContainer .ScrollBarStyle-itemsWrapper .ContainerInfoComponentStyle-itemsContainer > div > div:hover {
 	border-width: .1em;
 	border-style: solid;
-	border-color: var(--severitium-main-color);
+	border-color: var(--severitium-white-color);
 }
 
 /* Item probability block */
