--- a/src/Shop/MainScreen/MainScreen.css
+++ b/src/Shop/MainScreen/MainScreen.css
@@ -3,6 +3,8 @@
 .ShopSelectedSectionComponentStyle-scrollContainerShop.ShopSelectedSectionComponentStyle-scrollContainerShop {
 	min-width: 100%;
 	width: 100%;
+	height: 100%;
+	max-height: calc(100% - 8em);
 	box-sizing: border-box;
 	display: flex;
 	align-items: center;
@@ -14,9 +16,22 @@
 	scrollbar-width: thin;
 }
 
+/* Inner container for card(s) */
+
+.ShopSelectedSectionComponentStyle-scrollContainerShop.ShopSelectedSectionComponentStyle-scrollContainerShop > div {
+	height: calc(100% - .5em);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	margin: 0;
+	padding: 0;
+}
+
 /* Limited section single card */
 
 .ShopSelectedSectionComponentStyle-limitedOffersCommon {
+	height: 100%;
 	position: relative;
 	background: none;
 	box-shadow: 0 0 0 0 var(--severitium-main-color);
@@ -90,6 +105,7 @@
 /* Common section single card */
 
 .ShopSelectedSectionComponentStyle-commonCard {
+	height: calc(50% - 1em);
 	position: relative;
 	background: none;
 	box-shadow: 0 0 0 0 var(--severitium-main-color);
@@ -152,4 +168,63 @@
 
 .ShopSelectedSectionComponentStyle-commonCard:hover > span {
 	color: var(--severitium-white-text-color);
+}
+
+/* Shop footer container */
+
+.ShopFooterComponentStyle-container {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	min-width: 100%;
+	width: 100%;
+	max-width: 100%;
+	height: 4em;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0 1em 0 1em;
+	border: none;
+	border-top: var(--severitium-light-transparent-background2) solid .1em;
+	-webkit-backdrop-filter: blur(1em);
+	        backdrop-filter: blur(1em);
+	box-sizing: border-box;
+}
+
+/* Shop footer message */
+
+.ShopFooterComponentStyle-exclamation {
+	margin: 0;
+	padding: 0;
+	font-size: 1em;
+	color: var(--severitium-light-gray-text-color);
+	opacity: 1;
+}
+
+/* Shop footer gray button "report" */
+
+.ShopFooterComponentStyle-reportButton.ShopFooterComponentStyle-reportButton {
+	position: relative;
+	right: inherit;
+	margin: 0;
+	outline: none;
+	box-shadow: none;
+	border-radius: var(--severitium-border-radius);
+	background: var(--severitium-gray-button-background);
+	border: var(--severitium-gray-button-border-color) solid .1em;
+	transition: border .2s ease;
+}
+
+/* Button on hover */
+
+.ShopFooterComponentStyle-reportButton.ShopFooterComponentStyle-reportButton:hover {
+	outline: none;
+	box-shadow: none;
+	border: var(--severitium-gray-button-border-color-hover) solid .1em;
+}
+
+/* Button text */
+
+.ShopFooterComponentStyle-reportButton.ShopFooterComponentStyle-reportButton > span {
+	color: var(--severitium-gray-button-color);
 }
